MasterOfMuppets
	* Working on The Sign Quest atm.
	* Updating Items / Scripts
Nexon
	* Adding in the new Abyss/Thanatos/Lighthalzen NPC's and optimizing them.
Evera
	* Everything.
	* Dungeon Teleport System NPCs
	* iRO information gathering.
	* Kafra maintainment.

Musashiden
	*Scripting iRO latest towns (warps, NPCs, ect.)
	*iRO information gathering.

== Changelog ==

Date		Added
======
06/19
	* Removed Jfunc1-1.txt, merged parts of scripts back. Changed job numbers to constants [Lupus]
	- Jfunc2-1.txt & Jfunc2-2.txt todo
06/17
	* Fixed a Rachel warp thanks to Dr.Evil [Playtester]
	* Fixed some typos in quests_lighthalzen.txt thanks to Karore [Playtester]
06/16
	* Implemented the Lover's quest. [MasterOfMuppets]
	* Yet another missing Juno warp. [musashiden]
	* Corrected a duplicate juno warp + a juno guide sprite. [Musashiden]
	* Updated sample script mob_controller.cpp to the latest standards. [Lance]
	* Commited Silent's Fix to the duplicate NPCs [Playtester]
	- needs testing
	- can't be fully fixed because of length limitation of names
06/15
	* Juno's NPCs are now updated (unless i missed one) according to iRO! yay! [Musashiden]
	* Juno Update Process. 75% complete. [Musashiden]
	* Fixed the gambling npc giving Orc Helm [1] instead of the non-slotted version. [MasterOfMuppets]
	* Dr.Evil fixed some parts of his Umbala script [Playtester]
	* Updated the color codes on the Juno Guides mini map illustrations. [Musashiden]
	* Juno Update Process. 50% complete. [Musashiden]
	* Fixed an exploit in the Comodo gambling script. [Lupus]
06/14
	* Separated the Metto quest from the juno town npcs file. [musashiden]
	* Juno Update Process. 30% complete. [Musashiden]
	* Some more sign quest warps [MasterOfMuppets]
	* Fixed Job Level requirement for Auto-Berserk [Playtester]
	* Fixed some experience gained bugs in two scripts. [MasterOfMuppets]
	- Also fixed a major problem in the level 4 weapon quest, thanks to Qwadrat.