@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/06/19
+	* Some cleanups and corrections in battle.c to account for negative
+	  (absorbed) damage. [Skotlex]
 	* Fixed fame-list updating crashing char-sql server when the given char-id
 	  just got into ranking. [Skotlex]
 	* Added missing Arunafeltz maps with information from NLZ [Evera]
